--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,10 @@
   color: red;
 }
 
+.buddy-list {
+  border-left: 1px solid lightgray;
+}
+
 .ce-wrapper {
   margin-left: 0px;
   margin-right: 0px;
@@ -116,7 +120,7 @@
 
 .chat-channel-name {
   list-style: none;
-  font-size: .75rem;
+  font-size: .85rem;
   margin-left: 15px;
   font-weight: bold;
   user-select: none;
@@ -132,6 +136,7 @@
   background-color: white;
   margin-left: 30px;
   margin-top: 5px;
+  box-shadow: 2px 2px 2px #424242;
 }
 
 .chat-title-container {
@@ -155,9 +160,11 @@
 }
 
 .friend-status {
+  width:100%;
   font-size: .75rem;
   margin-left: 15px;
-  color: lightgray;
+  color: rgb(179, 179, 179);
+  font-weight:bolder;
 }
 
 .header {
@@ -234,6 +241,14 @@
   line-height: 25px;
 }
 
+.loading-messages {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .their-message {
   color: red;
   font-weight: bold;
@@ -272,8 +287,8 @@
 }
 
 .buddies-list-name {
-  margin-left: 15px;
-  margin-top: 15px;
+  margin-left: 10px;
+  margin-top: 10px;
   font-weight: bold;
   margin-bottom: -3px;
   user-select: none;
@@ -281,6 +296,18 @@
 
 .buddies-list-name:hover {
   cursor: pointer;
+}
+
+.offline-buddies-list-name {
+  margin-left: 10px;
+  margin-top: 10px;
+  font-weight: bold;
+  color:grey;
+  user-select: none;
+}
+
+.offline-buddies-list-name:hover {
+  cursor:pointer;
 }
 
 .trash-icon {
@@ -423,6 +450,10 @@
 
 .jodit-wysiwyg {
   background-color: white;
+  border-bottom: 3px solid #f4f4f4;
+  border-right: 3px solid #f4f4f4;
+  border-left: 3px solid #848484;
+  border-top: 3px solid #848484;
 }
 
 .message-form {
@@ -469,12 +500,14 @@
 }
 
 .send-button {
-  /* width: 65px;
-  height: 65px; */
   padding: .75rem;
-  float: right;
   background-color: #ECEAD8;
   border: 2px outset;
+}
+
+.send-button img {
+  height:100%;
+  width:100%;
 }
 
 .send-button:hover {
@@ -534,6 +567,10 @@
 
 .icon-change-form label {
   margin-bottom: 5px;
+}
+
+.jodit-toolbar__box {
+    display:flex;
 }
 
 /* STATUS WINDOW STYLES */
@@ -668,6 +705,32 @@
   margin-top: 10px;
 }
 
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 150%;
+  position: relative;
+  left: 31px;
+  top:5px;
+}
+
+.nav__list {
+  margin: 0;
+    padding: 5px 0;
+    list-style: none;
+    display: flex;
+}
+
+.nav__item {
+  padding: 0 5px;
+    cursor: pointer;
+}
+
+.nav__warning-level {
+  padding-right: 5px;
+}
+
 .new-friend-form {
   width: 100%;
   text-align: center;
@@ -687,7 +750,8 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction:column;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -708,6 +772,7 @@
 .user-actions {
   display: flex;
   height: 7%;
+  width:100%;
   align-items: center;
   justify-content: space-around;
 }
@@ -737,6 +802,7 @@
 
 .user-channels {
   background-color: white;
+  font-size:1.2rem;
   height: 80%;
   border: 2px solid black;
   margin-left: 2px;
@@ -744,6 +810,7 @@
 }
 
 .user-details {
+  width:75%;
   margin-top: 0px;
   margin-left: 5px;
 }
