--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@
 .chat-channel-name {
   list-style: none;
   font-size: .85rem;
-  margin-left: 15px;
+  margin-left: 25px;
   font-weight: bold;
   user-select: none;
 }
@@ -162,7 +162,7 @@
 .friend-status {
   width: 100%;
   font-size: .75rem;
-  margin-left: 15px;
+  margin-left: 25px;
   color: rgb(179, 179, 179);
   font-weight: bolder;
 }
@@ -275,16 +275,11 @@
   width: 100%;
 }
 
-.friend-avatar {
-  position: absolute;
-  left: 1%;
-  height: 70px;
-  width: 100px;
-}
-
-.friend-avatar img {
-  height: 100%;
-  width: 100%;
+.buddy-avatar {
+  height:25px;
+  width:25px;
+  position:absolute;
+  left:25px;
 }
 
 .buddies-list-name {
